--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -18,7 +18,7 @@ GlobalDefaultServerGameMode=None
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
-
+BundleIdentifier=gc.mdev1003.[PROJECT_NAME]
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
