adding Android icons

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -19,6 +19,7 @@ GlobalDefaultServerGameMode=None
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
 MinimumiOSVersion=IOS_12
 BundleIdentifier=gc.mdev1003.[PROJECT_NAME]
+SoundCueCookQualityIndex=0
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Mobile
