added ability to keep score from one level to the next

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -10,7 +10,7 @@ TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
 FourPlayerSplitscreenLayout=Grid
 bOffsetPlayerGamepadIds=False
-GameInstanceClass=/Script/Engine.GameInstance
+GameInstanceClass=/Game/MyContent/MySuperGameInstance.MySuperGameInstance_C
 GameDefaultMap=/Game/RollingBP/Maps/RollingBPExampleMap.RollingBPExampleMap
 ServerDefaultMap=/Engine/Maps/Entry.Entry
 GlobalDefaultGameMode=/Game/RollingBP/Blueprints/RollingGameMode.RollingGameMode_C
